refractored and added date search

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-
 .App {
   text-align: center;
+  /* background-color: hsl(0, 0%, 11%); Set the background color to a darker shade */
 }
 
 .App-logo {
